--- a/bardot.html
+++ b/bardot.html
@@ -70,16 +70,16 @@
     <div class="block">
       <h2 class="block-in">The Brief</h2>
       <p class="block-in">
-        New eCommerce website with a refreshing look and user-centered design.
-        The mission was to optimise the current site's UX/UI and deliver a new shopping experience that would drive conversion rate forward.
+        New eCommerce website with a refreshing look and user-centered design, new shopping experience to drive conversion rate forward. Mobile-first approach
       </p>
     </div>
       <div class="block">
         <p>
-          <strong class="block-in">Platform</strong> <br />
-           Responsive web <br /><br />
+          <strong class="block-in">Project Type</strong> <br />
+           B2C eCommerce, UX/UI design
+          <br /><br />
           <strong class="block-in">Deliverables</strong> <br />
-           Interactive Prototype
+           Interactive prototype
         </p>
       </div>
   </div>
@@ -149,7 +149,7 @@
     <div class="block">
       <h4 class="block-in">DROPDOWN MENU UI</h4>
       <p class="block-in">
-        Dropdown menu redesign with enhanced UI and category taxonomy
+        Redesigned category taxonomy and UI enhancement on dropdown menu
       </p>
     </div>
 
@@ -162,10 +162,9 @@
 
   <div class="wrapper light-bg-f9f9f9">
     <div class="block small-block">
-      <h4 class="block-in">LOCATE IN-STORE Feature</h4>
+      <h4 class="block-in">Micro Interactions</h4>
       <p class="block-in">
-        Last-minute out-of-scope function for an in-store availability quick check.
-        A quick Popup served perfectly well for this purpose.
+        UX/UI solutions for additional features and functions
       </p>
     </div>
     <div class="block big-block no-text-block block-in">
@@ -179,14 +178,14 @@
       <img alt="Mobile Search" src="./Assets/bardot-badges.jpg" />
     </div>
     <div class="block small-block">
-      <h4 class="block-in">PRODUCT BADGES</h4>
-      <p class="block-in">Designed visually distinguished badges for applicable product tiles.</p>
+      <h4 class="block-in">Visual Design</h4>
+      <p class="block-in">Visual design for product badges and other graphic elements</p>
     </div>
   </div>
 
   <div class="wrapper big-col light-bg-f9f9f9">
     <div class="block">
-      <h4 class="block-in">Store finder Design</h4>
+      <h4 class="block-in">Creation & amendments on primary & secondary pages</h4>
     </div>
     <img alt="Find a store" class="noShadow-img block-in" src="./Assets/bardot-findStore.png" />
   </div>
@@ -194,10 +193,10 @@
 
 
 <div class="wrapper big-col" id="bardot-screenCollage">
-    <h4 class="block-in">Secondary Pages</h4>
-    <p class="block-in">
+    <h4 class="block-in">Order & Account management flows</h4>
+<!--     <p class="block-in">
       All the other pages: Order Details/Management, Account Management, Settings, etc.
-    </p>
+    </p> -->
       <img alt="user flow" class="screenCollage block-in" src="./Assets/bardot-collage.png" />
 </div>
 
@@ -210,17 +209,17 @@
   <h2>Other Works</h2>
   <div class="work-tiles">
 
-    <div class="work-tile block-in" >
-      <div id="tile_schecker"></div>
-      <a href="./scheckerIntro.html" class="tile-CTA">
-        <img alt="Schecker Logo" src="./Assets/Schecker_logo.png" />
-      </a>
-    </div>
-
     <div class="work-tile block-in">
       <div id="tile_sa"></div>
       <a href="./sa.html" class="tile-CTA">
         <img alt="SA Logo" src="./Assets/logo_sa.png" />
+      </a>
+    </div>
+
+     <div class="work-tile block-in" >
+      <div id="tile_rr"></div>
+      <a href="./rr.html" class="tile-CTA">
+        <img alt="RR Logo" src="./Assets/logo_rr.png" />
       </a>
     </div>
 
