--- a/cv.html
+++ b/cv.html
@@ -54,7 +54,7 @@
         </svg>
 
     <!-- <h2 id="wc-text_1">Curriculum Vitae</h2> -->
-    <h5><small>NHUT H. DON</small></h5>
+    <h5><small>NHUT HOANG-DON</small></h5>
 
 
   <a class="small-arrow-down" id="cv-arrow-down" href="#highlights">
@@ -64,21 +64,21 @@
 
 
 <section class="cv-contents" id="highlights">
-  <h3>Highlights</h3>
+  <h3>Education</h3>
   <div class="blocks">
     <div class="block">
-      <h4>Education</h4>
-      <h5>Bachelor of Design (Multimedia Systems)</h5>
+      <h4>Bachelor of Design (Multimedia Systems)</h4>
+      <h5>Royal Melbourne Institute of Technology (RMIT)</h5>
       <p>
-        Royal Melbourne Institute of Technology
+        2010 - 2014
       </p>
     </div>
 
     <div class="block">
-      <h4>Work Experience</h4>
-      <h5>UX/UI Designer</h5>
+      <h4>MSc. Marine Science & Climate Change</h4>
+      <h5>University of Gibraltar</h5>
       <p>
-        2015 - current
+        2022 - 2023
       </p>
     </div>
   </div>
@@ -90,32 +90,30 @@
   <div class="blocks">
 
     <div class="block">
-      <h4>The Essential</h4>
+      <h4>The Technical</h4>
       <ul>
-        <li><p>Design principles were a big part of my major.</p></li>
-        <li><p>I strive to approach UX/UI problems under a user's eye.</p></li>
-        <li><p>I put away the so-called 'designer ego' when designing for users.</p></li>
-        <li><p>I must get to know my users first prior to creating any design.</p></li>
-        <li><p>I love the whole process of creating a product (from sketchy sketches to fancy prototypes).</p></li>
-        <li><p>I have, and would be happy to work on interdisciplinary projects that go beyond my current expertise.</p></li>
-        <li><p>I am interested in finding a solution rather than winning an argument.</p></li>
-        <li><p>I am obsessed with solving problems and won't rest until I find a solution.</p></li>
-        <li><p>I am aware that there can never be "too much of knowledge"; hence, I am always&nbsp;learning.</p></li>
+        <li><p>Proficient in Figma, Sketch, InVision, Zeplin, and most software from the Adobe Creative Suite</p></li>
+        <li><p>Strong foundational knowledge to pickup new tools if required</p></li>
+        <li><p>Working knowledge of HTML/CSS/JS</p></li>
+        <li><p>Professional experience with website and app development process</p></li>
+        <li><p>Familiar working in a Scrum environment</p></li>
+        <li><p>Ability to utilise multidisciplinary background and approaches to tackle various types of projects</p></li>
+        <li><p>Scientific research, writing, and communication skills</p></li>   
       </ul>
     </div>
 
     <div class="block">
-      <h4>The Technical</h4>
+      <h4>The Personal</h4>
       <ul>
-        <li><p>My current tools of use are Sketch, InVision Studio, InVision, Zeplin,</p></li>
-        <li><p>and Adobe Photoshop/Illustrator as a complement.</p></li>
-        <li><p>I believe I have a strong enough foundation to pick up any new tools if necessary.</p></li>
-        <li><p>I can build basic websites from HTML/CSS/JS (constructed my Portfolio Site from scratch).</p></li>
-        <li><p>I have experience working with responsive websites and native apps.</p></li>
-        <li><p>I am familiar with Confluence & Jira.</p></li>
-        <li><p>I have a multimedia background that could come in handy in certain projects.</p></li>
+        <li><p>I practice the balance between design principles and common sense</p></li>
+        <li><p>I think open discussions are healthy, and compromises are essential for the best outcomes</p></li>
+        <li><p>I enjoy my own company while also appreciating the power of teamwork</p></li>
+        <li><p>I strive to employ logic, rationale, and intuition in my work</p></li>
+        <li><p>I love product creation and integrating innovative methods to any aspect of life</p></li>
+        <li><p>I am aware that there is always room for improvements and that one's knowledge is limited; hence, I embrace new challenges and am excited to learn new things</p></li>
       </ul>
     </div>
+
 
     <div class="block" id="languages">
       <h4>Languages</h4>
@@ -125,6 +123,15 @@
       </ul>
     </div>
 
+    <div class="block">
+      <h4>Notable Projects</h4>
+      <p>Major involvement in the design and development of:</p>
+      <ul>
+        <li><p><strong>Heineken B2B platform, Medical app startup, Bardot B2C eCommerce site, Standards Australia content website, <i> and other projects such as</i> Radio Rentals, ShaverShop, Meat & Livestock Australia (MLA), Integrity Systems (ISC), My7Christmas</strong></p></li>
+      </ul>
+      <p>→ Shaped UX/UI, created/maintained documentation, supported and ensured consistency in development</p>
+    </div>
+
   </div>
 </section>
 
@@ -132,16 +139,87 @@
 
 
 <section class="cv-contents" id="timeline">
-  <h3>Career Summary</h3>
+  <h3>Career Timeline</h3>
   <div class="timeline">
     <span class="tl-line"></span>
+
     <div class="event">
-      <div class="year"><h6>2010 - 2014</h6></div>
+      <div class="year"><h6>09/2022 - 10/2023</h6></div>
       <div class="time-mark"></div>
       <div class="achievemnents">
         <div>
-          <h6>Bachelor of Design <br />(Multimedia Systems)</h6>
-          <p><small>RMIT | Saigon, VN & Melbourne, AU</small></p>
+          <h6>MSc. Marine Science & Climate Change</h6>
+          <p><small>
+            University of Gibraltar <br />
+            <i>Gibraltar</i>
+          </small></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="event">
+      <div class="year"><h6>10/2021 - 08/2022</h6></div>
+      <div class="time-mark"></div>
+      <div class="achievemnents">
+        <div>
+          <h6>Biology & Environmental Study</h6>
+          <p><small>Distance Learning & Self-study</small></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="event">
+      <div class="year"><h6>04/2021 - 10/2021</h6></div>
+      <div class="time-mark"></div>
+      <div class="achievemnents">
+        <div>
+          <h6>M.A. Open Design <span><small><i>(dropped out)</i></small></span></h6>
+          <p><small>
+            Humboldt-Universität zu Berlin (HU) <br />
+            Universidad de Buenos Aires (UBA) <br />
+            <i>Committed online amid Covid-19</i>
+          </small></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="event">
+      <div class="year"><h6>10/2018 - 09/2022</h6></div>
+      <div class="time-mark"></div>
+      <div class="achievemnents">
+        <div>
+          <h6>Freelance & Contractor Multimedia Designer</h6>
+          <p><small>Remotely</small></p>
+          <ul>
+            <li>Provided consultant and digital design services</li>
+            <li>Managed and balanced multiple projects simutaneously</li>
+            <li>Collaborated with cross-functional teams and clients to ensure timely product delivery</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+      
+    <div class="event">
+      <div class="year"><h6>01/2015 - 09/2018</h6></div>
+      <div class="time-mark"></div>
+      <div class="achievemnents">
+        <div>
+          <h6>UX/UI Designer <br /> (Associate - Senior - Teamlead)</h6>
+          <p><small>
+            Dormer Technology Services <br>
+            <i>Saigon, VN</i>
+          </small></p>
+          <ul>
+            <li>Produced wireframes, mockups, prototypes for Web/App&nbsp;products</li>
+            <li>Promoted UX/UI&nbsp;solutions</li>
+            <li>Created and maintained product documentation (UI specs, styleguides, assets,&nbsp;etc.)</li>
+            <li>Collaborated with interdisciplinary & multinational teams and stakeholders to achieve optimal solutions and ensure product&nbsp;quality</li>           
+            <li>Tackled unfamiliar projects such as UX/UI design for petroleum refill apps and apps for POS&nbsp;devices</li>
+            <li>Liaised & coordinated projects between internal/external teams and&nbsp;stakeholders</li>
+            <li>Mentored junior team members and&nbsp;interns</li>
+            <li>Managed task delegation and provided oversight to UX/UI team to achieve project objectives</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -152,54 +230,33 @@
       <div class="achievemnents">
         <div>
           <h6>Design Intern</h6>
-          <p><small>Studio60 | Saigon, VN</small></p>
+          <p><small>
+            Dormer Technology Services <br>
+            <i>Saigon, VN</i>
+          </small></p>
           <ul>
             <li>Optimised/prepared images & assets for web/app&nbsp;development</li>
             <li>Assisted in UX/UI-related tasks</li>
-            <li>Designed company's Intranet</li>
+            <li>Designed company's intranet</li>
           </ul>
         </div>
       </div>
     </div>
 
     <div class="event">
-      <div class="year"><h6>01/2015 - 09/2018</h6></div>
+      <div class="year"><h6>2010 - 2014</h6></div>
       <div class="time-mark"></div>
       <div class="achievemnents">
         <div>
-          <h6>UX/UI Designer <br /> (Junior - Senior - Local&nbsp;Teamlead)</h6>
-          <p><small>Studio60 | Saigon, VN</small></p>
-          <ul>
-            <li>Produced wireframes, mockups, prototypes for Web/App&nbsp;Products</li>
-            <li>Promoted UX/UI&nbsp;solutions</li>
-            <li>Created UI specs, styleguides, assets for product&nbsp;development</li>
-            <li>Gathered insights from user research team & stakeholders to create/amend designs&nbsp;accordingly</li>
-            <li>Designed interfaces for unpopular devices (e.g. petroleum refill app, apps for POS&nbsp;devices)</li>
-            <li>Liaised & collaborated with international stakeholders &&nbsp;teams for best outcomes</li>
-            <li>Led local design team & mentored&nbsp;interns</li>
-            <li>Delegated & managed team members' tasks to meet project&nbsp;deadlines</li>
-            <li>Onsite work in Sydney for client meetings, trainings, and collaborations</li>
-            <li>Created visual-related materials (e.g. pitch decks, banners,&nbsp;posters)</li>
-            <li>Designed company's new office (floor plan, 3D design,&nbsp;interior)</li>
-          </ul>
+          <h6>Bachelor of Design (Multimedia Systems)</h6>
+          <p><small>
+            Royal Melbourne Institute of Technology (RMIT) <br>
+            <i>Saigon South Campus, VN, & Melbourne, AU</i>
+          </small></p>
         </div>
       </div>
     </div>
 
-    <div class="event">
-      <div class="year"><h6>10/2018 - current</h6></div>
-      <div class="time-mark"></div>
-      <div class="achievemnents">
-        <div>
-          <h6>Freelancer</h6>
-          <ul>
-            <li>Working on side&nbsp;projects</li>
-            <li>Learning Frontend Web Development (HTML/CSS/JS)</li>
-            <li>Freelancing as a UX/UI&nbsp;designer</li>
-          </ul>
-        </div>
-      </div>
-    </div>
 
   </div>
 
@@ -217,9 +274,9 @@
         <a href="mailto:nhuthoangdon@gmail.com">nhuthoangdon@gmail.com</a>
       </p>
       <br />
-      <h5>Mobile</h5>
+      <h5>Skype</h5>
       <p>
-        +84-93-401-3398
+        nhut.hoangdon
       </p>
     </div>
 
@@ -228,11 +285,11 @@
       <p>
         <a href="https://nhuthoangdon.github.io">nhuthoangdon.github.io</a>
       </p>
-      <br />
+      <!-- <br />
       <h5>Current Location / Timezone</h5>
       <p>
         Saigon, Vietnam / GMT+7
-      </p>
+      </p> -->
     </div>
 
   </div>
