--- a/heineken.html
+++ b/heineken.html
@@ -70,16 +70,16 @@
     <div class="block block-in">
       <h2>The Brief</h2>
       <p>
-        Heineken was launching a new, centralised B2B eCommerce platform that was consolidated, yet customisable for each individual country/region.
-        My role in this project was to implement new features and improve the current UX/UI where feasible for relevant Opcos in the APAC region.
+        Improve current UX/UI and implement new features for the centralised B2B eCommerce platform, customisation for individual countries/OpCos within the APAC region
       </p>
     </div>
       <div class="block block-in">
         <p>
-          <strong>Platform</strong> <br />
-           Web & App (App focus). <br /><br />
-          <strong>Deliveries</strong> <br />
-           Interactive Prototype.
+          <strong>Project Type</strong> <br />
+            B2B eCommerce, webapp & mobile app
+           <br /><br />
+          <strong>Deliverables</strong> <br />
+            Interactive mockups
         </p>
       </div>
   </div>
@@ -90,8 +90,7 @@
   <h3>CHALLENGES</h3>
     <div class="block">
       <p>
-        Requirements of some Opcos can be challenging to customise so that the features would meet the Opcos' needs while being well-aligned with the central platform,
-        without causing tremendous development efforts.
+        Balancing stakeholder demands and system consistency, capacity, resources, and development efforts. Support & optimisation for older, non-tech-savvy audience (main users)
       </p>
     </div>
 </section>
@@ -103,74 +102,77 @@
     <h4 class="block-in">On-boarding Flow</h4>
     <div class="block no-margin-top block-in">
       <p>
-        <strong><u>Issue(s):</u></strong> <br />
-        • Unfriendly Login/Registration processes, too much information on a single screen. <br>
-        • Only supported traditional login with username and password, which research showed the majority of users forgetting after the initial setup. <br>
-        • The UI was not optimised for mobile (unsuitable font-size, unnecessary use of overlays, distracting background, and so on). <br />
+        <strong><u>Task(s):</u></strong> 
+        <br />
+        Optimise the Login and Registration process. Redesign the onboarding flows (Login, Register, Forgot Password) to be up to par with UX best practice. Refine UI to suit intended audience, mobile-first approach
+        <!-- • Unfriendly Login/Registration process, scrambling information on a single screen <br />
+        • Only supported traditional login with username and password <br />
+        • No mobile optimisation <br />
+        • UX/UI revamps needed <br /> -->
+        <br /><br />
         <strong><u>Approach(es):</u></strong> <br />
-        • Reviewed and trimmed down unnecessary information, broke down the process into smaller steps. <br />
-        • Integrated login/register with mobile number and OTP. <br>
-        • Limited user options, utilised similar inputs in 1 single field (e.g. email, username or phone number for login ID). <br />
-        • Simple, lean UI. <br />
+        • UX research (informal), constructed detailed flow diagram <br />
+        • Simplified steps, limited amount of information <br />
+        • Phone number and OTP login/register integration <br>
+        • Flexible input options <br />
+        • Simple, lean UI, accommodating bigger text display <br />
       </p>
     </div>
 
-      <video playsinline autoplay loop muted class="desktop-screen block-in">
-        <source src="./Assets/bardot-login-cart-wishlist.mov" type="video/mp4" />
-        Sorry it's a really nice video your browser failed to load.
-      </video>
+    <img class="noShadow-img block-in" alt="Heineken DOT Onboarding Flow" src="./Assets/DOT_onboarding.jpg" />
   </div>
 
 
 
   <div class="wrapper big-col no-margin-top">
-    <h4 class="block-in">Order Flow</h4>
+    <h4 class="block-in">Ordering Experience</h4>
     <div class="block no-margin-top block-in">
       <p>
-        <strong><u>Issue(s):</u></strong> <br/>
-        • Current system only allowed purchasing from 1 distributor per time. As an eCommerce platform, this wouldn't provide optimal
-        experience for users. <br />
-        • Distributor could only be selected at the beginning of app/web launch, no direct or easy path to re-select. <br />
-        • Compromised current cart logic when changing distributor while there were already items from another distributor in cart. <br>
+        <strong><u>Task(s):</u></strong> <br/>
+        Define and amend complex order flows for consumers and distributors, ensuring consistency of orders between the audiences. Tailor/add functionalities for individual OpCos
+        <!-- • Limited ordering experience (e.g. unclear, disorderly user flows, lack of functions) <br />
+        • Compromised order/shopping cart logic due to confusing navigation flow <br /> -->
+        <br /><br />
         <strong><u>Approach(es):</u></strong> <br />
-        • Revised the whole ordering experience to allow for multiple distributor purchases. <br>
-        • Enhanced checkout process & information hierachy. <br />
-        • Revamped relevant UI. <br />
+        • Redesigned user flows <br>
+        • Identified and resolved discrepancies and incoherence between flows <br />
+        • Enhanced checkout process & information hierachy <br />
+        • Revamped UI for clearer/more transparent displays <br />
       </p>
     </div>
-        <img alt="Search" class="desktop-screen block-in" src="./Assets/bardot-search.jpg" />
+        <img alt="Search" class="noShadow-img block-in" src="./Assets/DOT_orderFlow_flowchart.png" />
+        <img alt="Search" class="noShadow-img block-in" src="./Assets/DOT_distributorSelectionFlow_flowchart.png" />
   </div>
 
 
 
 
   <div class="wrapper big-col">
-    <h4 class="block-in">Order Details & Management Flow</h4>
+    <h4 class="block-in">Order Details & Management</h4>
     <div class="block no-margin-top block-in">
       <p>
-        <strong><u>Issue(s):</u></strong> <br>
-        • Order Details and Management needed to be customised to suit individual Opco's mechanism. <br>
+        <strong><u>Task(s):</u></strong> <br>
+        Update and refine order management flows on consumer and distributor interfaces. Tailor functionalities as per region requirements
+        <br /> <br />
         <strong><u>Approach(es):</u></strong> <br>
-        • Analysed requests vs. supported UX/UI and updated/created designs accordingly. <br>
-        • Reconstruct ordering process from both seller & buyer sides.
+        • Fine-tuned user flows <br>
+        • Ensured consistency between ordering flows and order management flows <br />
+        • Revamped UI
       </p>
     </div>
-
-      <video playsinline autoplay loop muted class="desktop-screen block-in">
-        <source src="./Assets/bardot-megaMenu.mov" type="video/mp4" />
-        Sorry it's a really nice video your browser failed to load.
-      </video>
+    <img alt="Search" class="noShadow-img block-in" src="./Assets/DOT_orderFlow_screens.jpg" />
+      
   </div>
 
 
 </section>
 
-<section class="light-bg-f9f9f9" id="bardot-screenCollage">
+<section class="light-bg-f9f9f9" id="heineken-screenCollage">
   <h4 class="block-in">The Rest</h4>
-  <p>Other major & minor flows/twists.</p>
+  <p>Other major & minor flows/twists</p>
 
   <div class="block-in">
-    <img alt="user flow" src="./Assets/bardot-collage.png" />
+    <img alt="user flow" src="./Assets/DOT_collage.png" />
   </div>
 </section>
 
@@ -191,9 +193,9 @@
     </div>
 
     <div class="work-tile block-in">
-      <div id="tile_sa"></div>
-      <a href="./sa.html" class="tile-CTA">
-        <img alt="SA Logo" src="./Assets/logo_sa.png" />
+      <div id="tile_bardot"></div>
+      <a href="./bardot.html" class="tile-CTA">
+        <img alt="Bardot Logo" src="./Assets/logo_bardot.png" />
       </a>
     </div>
 
