--- a/rr.html
+++ b/rr.html
@@ -64,23 +64,22 @@
 
 <section class="project-intro">
 
-  <div class="project-hero block-in">
     <div class="hero-img" id="rr-hero-img"></div>
-  </div>
 
   <div class="wrapper">
     <div class="block block-in">
       <h2>The Brief</h2>
       <p>
-        UX/UI enhancements. UX solutions on the online forms for optimal user experience and drive application rate.
+        UX solutions for product browsing experience and application forms
       </p>
     </div>
       <div class="block block-in">
         <p>
           <strong>Project Type</strong> <br />
-          UX/UI research & enhancements. <br /><br />
-          <strong>My Role</strong> <br />
-          UX/UI design.
+            Experience design, B2C eCommerce
+          <br /><br />
+          <strong>Deliverables</strong> <br />
+            Clickable wireframes & prototype
         </p>
       </div>
   </div>
@@ -91,7 +90,7 @@
   <h3 class="block-in">THE CHALLENGE</h3>
     <div class="block">
       <p>
-        Making a complex process pain-free. Heavy information, multiple integrations.
+        Complex application process, large amount of information, multiple integrations, optimisation for mobile devices
       </p>
     </div>
 </section>
@@ -101,9 +100,7 @@
     <h4 class="block-in">The Application</h4>
     <div class="block no-margin-top block-in">
       <p>
-        Each step of the application process was designed base on insights from user research and client's requirements.
-        The process required quite many inputs and verifications which could be a hassle for customers if not presented well.
-        The solutions were to break the process down to step by step and arrange the required information by common orders.
+        Multi-step application process to be aligned with insights from user research and business requirements
       </p>
     </div>
     <img class="noShadow-img block-in" alt="Application Process" src="./Assets/rr-application.png" />
@@ -115,14 +112,12 @@
     <h4 class="block-in">The Profile</h4>
     <div class="block no-margin-top block-in">
       <p>
-        Customer Profile contained complex information, features and details, thus very content-heavy.
-        The page was designed with vertical section navigator to the left (desktop), and accordions for contents to the right.
-        Many other UI components were also used. UI was kept as simple as possible for optimal content loading speed.
+        Experience design for content-heavy user profile, minimal UI elements for optimal loading speed
       </p>
     </div>
-    <h5 class="block-in"><small>Hi-fi Wireframes</small></h5>
+    <h5 class="block-in"><small>(Hi-fi Wireframes)</small></h5>
     <img class="noShadow-img block-in" alt="Application Process" src="./Assets/rr-profile-wire.png" />
-    <h5 class="block-in"><small>Click-thru Prototypes</small></h5>
+    <h5 class="block-in"><small>(Click-thru Prototypes)</small></h5>
     <img class="noShadow-img block-in" alt="Application Process" src="./Assets/rr-profile-mock.png" />
   </div>
 
@@ -142,14 +137,14 @@
     <div class="work-tile block-in" >
       <div id="tile_schecker"></div>
       <a href="./scheckerIntro.html" class="tile-CTA">
-        <img alt="Bardot Logo" src="./Assets/Schecker_logo.png" />
+        <img alt="Schecker Logo" src="./Assets/Schecker_logo.png" />
       </a>
     </div>
 
     <div class="work-tile block-in">
-      <div id="tile_bardot"></div>
-      <a href="./bardot.html" class="tile-CTA">
-        <img alt="Bardot Logo" src="./Assets/logo_bardot.png" />
+      <div id="tile_heineken"></div>
+      <a href="./heineken.html" class="tile-CTA">
+        <img alt="Heineken Logo" src="./Assets/Heineken_logo.png" />
       </a>
     </div>
 
