--- a/sa.html
+++ b/sa.html
@@ -64,23 +64,21 @@
 
 <section class="project-intro">
 
-  <div class="project-hero block-in">
-    <div class="hero-img" id="sa-hero-img"></div>
-  </div>
+  <div class="hero-img" id="sa-hero-img"></div>
 
   <div class="wrapper">
     <div class="block block-in">
       <h2>The Brief</h2>
       <p>
-        A new website that is informative, yet visually engaging.
+        A refreshment from traditional NGO website, informative and visually engaging
       </p>
     </div>
       <div class="block block-in">
         <p>
-          <strong>Project type</strong> <br />
-          Web Design. <br /><br />
-          <strong>My Role</strong> <br />
-          Visual design.
+          <strong>Project Type</strong> <br />
+            Web design, content-based website <br /><br />
+          <strong>Deliverables</strong> <br />
+            Prototype, styleguides
         </p>
       </div>
   </div>
@@ -91,7 +89,7 @@
   <h3 class="block-in">CHALLENGES</h3>
     <div class="block">
       <p>
-        Time & budget constraints, content display/scale, design optimisation for CMS flexibility.
+        Time & budget constraints, content display/scale, design optimisation for CMS flexibility
       </p>
     </div>
 </section>
@@ -102,8 +100,7 @@
     <h4 class="block-in">MENU/NAV Bar REVAMP</h4>
     <div class="block no-margin-top block-in">
       <p>
-        Improved outdated generic menu with a multi-tier one to accommodate heavy info on hover as per client's
-        requirements. Redesigned header and emphasised search field.
+        Improved the outdated, generic menu with a multi-tier one to accommodate heavy content. Redesigned header with an emphasis on the search field and feature
       </p>
     </div>
     <img class="noShadow-img block-in" alt="Multi-level Menu" src="./Assets/sa-menu.png" />
@@ -118,9 +115,9 @@
       <img alt="Category Styling" class="noShadow-img" src="./Assets/sa-categoryColours.png" />
     </div>
     <div class="block small-block block-in">
-      <h4>CATEGORY STYLING UI</h4>
+      <h4>Visual Design</h4>
       <p>
-        Assigned each Standards Category a monochromatic set of coloured blocks for visual and filtering purposes.
+        Visual design for graphic elements, created universal styling for distinguished categories
       </p>
     </div>
   </div>
@@ -129,7 +126,7 @@
     <div class="block small-block block-in">
       <h4>SEARCH panel improvement</h4>
       <p>
-        Modern wide-width expanded search panel and suggestions.
+        Modernised expanded search panel, incorporated search suggestion function
       </p>
     </div>
     <div class="block big-block no-text-block block-in">
@@ -142,9 +139,9 @@
       <img alt="Search Suggestions" class="desktop-screen" src="./Assets/sa-searchResult.png" />
     </div>
     <div class="block small-block block-in">
-      <h4>SEARCH RESULTS Display</h4>
+      <h4>SEARCH Result</h4>
       <p>
-        Clear and simple display with intuitive filter and sort options.
+        Clear and simple display with intuitive filter and sort options
       </p>
     </div>
   </div>
@@ -153,9 +150,7 @@
     <h4 class="block-in">Standard page layouts</h4>
     <div class="block no-margin-top block-in">
       <p>
-        Since the website might need many pages with different layouts, we came up with a solution to design contents as
-        modules (hero image, full-width text, intro header, image block, body text, section navigator, etc.) and allow
-        client to construct/customise page layouts in the CMS.
+        Framework design for flexible layout customisation from CMS to suit different content page types
       </p>
     </div>
       <img alt="Info Pages" class="noShadow-img block-in" src="./Assets/sa-infoPages.png" />
@@ -166,7 +161,10 @@
 
   <div class="wrapper">
     <div class="block small-block block-in">
-      <h4>FORM &amp; POPUP STYLING guide</h4>
+      <h4>Design guidelines</h4>
+      <p>
+        Created UI guidelines and documentation for development, ensuring visual consistency in end product
+      </p>
     </div>
     <div class="block big-block no-text-block block-in">
       <img alt="Form" class="noShadow-img" src="./Assets/sa-popup.png" />
@@ -178,7 +176,7 @@
       <img alt="eDM" class="appScreen" src="./Assets/sa-eDM.png" />
     </div>
     <div class="block small-block block-in">
-      <h4>EDM STYLING Guide</h4>
+      <h4>Style Guide for additional materials (i.e. edms)</h4>
     </div>
   </div>
 
@@ -197,16 +195,16 @@
   <div class="work-tiles">
 
     <div class="work-tile block-in" >
-      <div id="tile_schecker"></div>
-      <a href="./scheckerIntro.html" class="tile-CTA">
-        <img alt="Bardot Logo" src="./Assets/Schecker_logo.png" />
+      <div id="tile_rr"></div>
+      <a href="./rr.html" class="tile-CTA">
+        <img alt="Radio Rentals Logo" src="./Assets/logo_rr.png" />
       </a>
     </div>
 
     <div class="work-tile block-in">
-      <div id="tile_rr"></div>
-      <a href="./rr.html" class="tile-CTA">
-        <img alt="Bardot Logo" src="./Assets/logo_rr.png" />
+      <div id="tile_heineken"></div>
+      <a href="./heineken.html" class="tile-CTA">
+        <img alt="Heineken Logo" src="./Assets/Heineken_logo.png" />
       </a>
     </div>
 
