--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -81,9 +81,9 @@
     </div>
       <div class="block">
         <p>
-          <strong><u>Concept:</u></strong> a personalised, inclusive, accessible healthcare system that helps managing symptoms and diseases. Not just a symptom checker, it aims to provide transparency in diagnostic and inform users about their conditions.
+          <strong><u>Concept:</u></strong> a personalised, inclusive, accessible healthcare system that helps managing symptoms and diseases. Not just a symptom checker, it aims to provide transparency in diagnostic and inform users about their conditions
            <br />
-          <strong><u>My Role:</u></strong> conceptualisation, prototyping
+          <strong><u>Deliverables</u></strong> conceptualisation, experimental design, app mockup
         </p>
       </div>
   </div>
