--- a/works.html
+++ b/works.html
@@ -66,6 +66,13 @@
       <div class="work-tiles">
 
         <div class="work-tile block-in" >
+          <div id="tile_heineken"></div>
+          <a href="./heineken.html" class="tile-CTA">
+            <img alt="Heineken Logo" src="./Assets/Heineken_logo.png" />
+          </a>
+        </div>
+
+        <div class="work-tile block-in" >
           <div id="tile_schecker"></div>
           <a href="./scheckerIntro.html" class="tile-CTA">
             <img alt="Schecker Logo" src="./Assets/Schecker_logo.png" />
@@ -79,6 +86,10 @@
           </a>
         </div>
 
+        <div class="work-tile block-in" id="title-tile">
+          <h1 class="centered-text">A glimpse of my works</h1>
+        </div>
+
         <div class="work-tile block-in">
           <div id="tile_sa"></div>
           <a href="./sa.html" class="tile-CTA">
@@ -88,9 +99,7 @@
       <!-- </div> -->
 
       <!-- <div class="work-tiles" id="first-tiles"> -->
-        <div class="work-tile block-in" id="title-tile">
-          <h1 class="centered-text">A glimpse of my works</h1>
-        </div>
+        
 
         <div class="work-tile block-in">
           <div id="tile_rr"></div>
