--- a/about.html
+++ b/about.html
@@ -63,12 +63,12 @@
   <div class="about">
     <h2>About me</h2>
     <p>
-      <strong>The Profession:</strong> I am working as a UX/UI designer with a background in Multimedia Systems.
-      One of my ambitions is to work on innovative products with great values. I enjoy solving problems with practical
-      solutions, and making complex things simple.
+      <!-- <strong>The Profession:</strong>  -->
+      I have worked as a UX/UI designer for about 7 years, leveraging my undergrad in Multimedia. I also hold a Master's degree in Marine Science & Climate Change, driven by a profound passion for the Sea and marine organisms. Despite the apparent disparity in my background, I believe they provide numerous advantages in addressing a wide range of challenges in various fields of work.
+      My aspiration is to contribute to impactful projects that serve a great purpose, whether in the realm of digital services or natural sciences.
+      <!-- <br />
       <br />
-      <br />
-      <strong>The Me:</strong> I am a guaranteed team player at work, dog parent at home, and a loner on the road.
+      <strong>The Me:</strong> I am a guaranteed team player at work, dog parent at home, and a loner on the road. -->
     </p>
 
     <p>
@@ -85,7 +85,7 @@
     <div class="portrait-cover">
       <p class="centered-text">
         <small>
-          <i>Nothing fancy here, just a pic of me.</i>
+          <i>Nothing fancy here, just a stylistic pic of me (caution advised if you have trypophobia)</i>
         </small>
       </p>
       <div class="CTA-button" id="reveal-me-btn">
