--- a/credits.html
+++ b/credits.html
@@ -70,6 +70,7 @@
 
   <a href="https://www.flaticon.com/"                 title="Flaticon">Flaticon</a>
   <a href="http://www.freepik.com">Freepik</a>
+  <a href="http://www.freepik.com">rawpixel.com / Freepik</a>
   <a href="https://www.pexels.com/photo/photo-of-a-man-in-white-long-sleeved-top-on-blue-and-white-pop-up-camper-753603/">Pexels</a>
 
 
