Almost final amend

--- a/cv.html
+++ b/cv.html
@@ -98,7 +98,7 @@
         <li><p>Professional experience with website and app development process</p></li>
         <li><p>Familiar working in a Scrum environment</p></li>
         <li><p>Ability to utilise multidisciplinary background and approaches to tackle various types of projects</p></li>
-        <li><p>Scientific research, writing, and communication skills</p></li>   
+        <li><p>Scientific research/writing, and science communication skills</p></li>   
       </ul>
     </div>
 
