--- a/heineken.html
+++ b/heineken.html
@@ -79,7 +79,7 @@
             B2B eCommerce, webapp & mobile app
            <br /><br />
           <strong>Deliverables</strong> <br />
-            Interactive mockups
+            Interactive mockups/prototypes
         </p>
       </div>
   </div>
@@ -129,7 +129,7 @@
     <div class="block no-margin-top block-in">
       <p>
         <strong><u>Task(s):</u></strong> <br/>
-        Define and amend complex order flows for consumers and distributors, ensuring consistency of orders between the audiences. Tailor/add functionalities for individual OpCos
+        Redefine and amend complex order flows for consumers and distributors, ensuring consistency of orders between the audiences. Tailor/add functionalities for individual OpCos
         <!-- • Limited ordering experience (e.g. unclear, disorderly user flows, lack of functions) <br />
         • Compromised order/shopping cart logic due to confusing navigation flow <br /> -->
         <br /><br />
