--- a/index.html
+++ b/index.html
@@ -282,9 +282,9 @@
 
 
 <section class="flex-column" id="more-works">
-  <h2 class="in-out-el" style="text-align: center;">There is still a bit more to see</h2>
-  <a class="big-link in-out-el" href="./works.html" target="_blank"><h5>View More</h5></a>
-  <span class= "in-out-el" style="position: relative; bottom: -15vh"><p style="font-weight: 400; letter-spacing: .02em"><i>P.S. I also built this website from scratch. Amateur, I know. But hey, it works :)</i></p></span>
+  <h2 class="in-out-el" style="text-align: center;">A bit more to see, if you fancy</h2>
+  <a class="big-link in-out-el" href="./works.html" target="_blank"><h5>View the Miscellaneous</h5></a>
+  <span class= "in-out-el" style="position: relative; bottom: -15vh"><p style="font-weight: 400; letter-spacing: .02em"><i>P.S. I also built this website from scratch using HTML5, CSS, and some JS libraries. Amateur, I know. But hey, it works :)</i></p></span>
 </section>
 
 
@@ -334,7 +334,9 @@
       	.st0{fill:#ffffff;stroke:#ffffff;stroke-width:2;stroke-miterlimit:10;}
       </style>
 
-        <path class="st0" d="M573.6,213.2c-1.9,8.5-5.7,14.7-12.9,19.5c-5.2,3.5-13.9,6.5-20,8c-8,2-11.5,3.5-20,3c-0.8-0.1-2.3-0.6-3-1
+<polygon class="st0" points="529.1,350.8 507.2,364.8 525.9,381.8 552.2,366.8 "/>
+<polygon class="st0" points="341.7,104.8 315.7,114.6 339.7,130.8 366.2,118.5 "/>
+<path class="st0" d="M573.6,213.2c-1.9,8.5-5.7,14.7-12.9,19.5c-5.2,3.5-13.9,6.5-20,8c-8,2-11.5,3.5-20,3c-0.8-0.1-2.3-0.6-3-1
   c-0.8-0.4-2.3-2.1-2.7-2.9c-4.3-8.3-6.4-19.5-0.1-26.3c3.9-4.2,9.8-5.6,15.3-7.3c10.2-3.2,19.7-8.6,27.9-15.4
   c7.8-6.5,12.4-15.7,19.4-22.4C583,179.3,576.1,202,573.6,213.2z"/>
 <path class="st0" d="M547.7,189.8c-4.7,3.5-14,8.9-18,10c-21,6-18.6,11-22,11c-3.5,0-6.2-13.6-8.4-17.1c-2.2-3.6-2.7-8.1-0.8-11.9
@@ -391,7 +393,6 @@
 <path class="st0" d="M29.7,33.1c-0.2-6.1,0-12.4-1.7-18.3C26.4,8.9,22.4,3.3,16.6,1.4c1,7.3,2.1,14.8,1.3,22.1
   C17,31.4,14.1,39,12.4,46.7c-3.1,14.4-2.3,27.4,3.3,41.1c0.4,1,6.7-4.3,8-5c7.8-4,15,2,12.9-11.3C34.5,58.5,30.2,46.2,29.7,33.1z"/>
 <path class="st0" d="M13,166.7c4-8.3,8.4-16,16-21.4C12.1,128.4,16.5,159.3,13,166.7z"/>
-<polygon class="st0" points="341.7,104.8 315.7,114.6 339.7,130.8 366.2,118.5 "/>
 <path class="st0" d="M225.5,131.8c-4.9,0.1-9.6-1.7-14-3.9s-8.5-4.9-13-6.8c-10-4.3-21.3-4.9-31-9.7c-9.5-4.8-16.6-13.2-24.9-19.9
   c-9-7.3-19.6-12.6-27.6-21c2-1.8,4.6-2.9,7.2-3.1c3.4-0.2,6.7,0.9,9.9,2.1c3.8,1.4,7.7,2.8,11.5,4.2c24,8.7,48.1,17.5,71.5,27.7
   c5.1,2.2,10,4.8,14.8,7.7c2.9,1.8,7.1,3.5,8.9,6.6C243.5,124.2,232.9,131.7,225.5,131.8z"/>
@@ -419,7 +420,6 @@
 <path class="st0" d="M459.7,359.8c-4.4,4.4-9.8,7.6-10.4,14.2c-0.1,0.6,0,1.3,0.3,1.9c0.5,0.9,1.6,1,2.6,1
   c11.8,0.4,22.6-3.9,33.1,2.1c2.5,1.4,4.8,3.4,7.4,4.5c2.7,1,6,0.9,7.9-1.5c1.1-1.5,1.5-3.5,1.7-5.4c1.1-9.4,0.9-18.9,0.8-28.4
   c-0.1-6.6-1.3-12.9-3.4-19.1c-2.4-7.2-6-11.9-11.6-12.2c-6.1-0.3-9.7,6.3-11,12C474.2,341.6,468.9,350.8,459.7,359.8z"/>
-<polygon class="st0" points="529.1,350.8 507.2,364.8 525.9,381.8 552.2,366.8 "/>
 <path class="st0" d="M528.4,357.8c-4.5,0.1-9,4-8.7,8.7c0.3,4,3.9,6.8,7.4,7.4c5.5,1,11.2-3.5,9.9-9.9
   C536.3,360.3,532.3,357.6,528.4,357.8z"/>
 <path class="st0" d="M510,395.9c3.3,6.9,4.9,14.6,4.7,22.2c5.8-0.8,12-1.7,17.5,0.5c1.7,0.7,3.3,1.6,5.1,1.6c3.5,0,5.8-3.6,7-6.8
