--- a/cv.html
+++ b/cv.html
@@ -96,9 +96,9 @@
         <li><p>Strong foundational knowledge to pickup new tools if required</p></li>
         <li><p>Working knowledge of HTML/CSS/JS</p></li>
         <li><p>Professional experience with website and app development process</p></li>
-        <li><p>Familiar working in a Scrum environment</p></li>
+        <li><p>Familiar working in an Agile/Scrum environment</p></li>
         <li><p>Ability to utilise multidisciplinary background and approaches to tackle various types of projects</p></li>
-        <li><p>Scientific research/writing, and science communication skills</p></li>   
+        <li><p>Scientific research/writing, and science communication skills</p></li>  
       </ul>
     </div>
 
@@ -106,11 +106,14 @@
       <h4>The Personal</h4>
       <ul>
         <li><p>I practice the balance between design principles and common sense</p></li>
-        <li><p>I think open discussions are healthy, and compromises are essential for the best outcomes</p></li>
-        <li><p>I enjoy my own company while also appreciating the power of teamwork</p></li>
         <li><p>I strive to employ logic, rationale, and intuition in my work</p></li>
         <li><p>I love product creation and integrating innovative methods to any aspect of life</p></li>
-        <li><p>I am aware that there is always room for improvements and that one's knowledge is limited; hence, I embrace new challenges and am excited to learn new things</p></li>
+        <li><p>I welcome feedback and criticisms, life is too bland without them</p></li>
+        <li><p>I embrace new challenges and always have a thirst for learning</p></li>
+        <li><p>I think open discussions are healthy, and compromises are essential for the best outcomes</p></li>
+        <li><p>I enjoy my own company while also appreciating the power of teamwork</p></li>
+        
+        
       </ul>
     </div>
 
