--- a/cv.html
+++ b/cv.html
@@ -142,7 +142,7 @@
 
 
 <section class="cv-contents" id="timeline">
-  <h3>Career Timeline</h3>
+  <h3>Experience</h3>
   <div class="timeline">
     <span class="tl-line"></span>
 
