--- a/cv.html
+++ b/cv.html
@@ -176,7 +176,7 @@
       <div class="time-mark"></div>
       <div class="achievemnents">
         <div>
-          <h6>M.A. Open Design <span><small><i>(dropped out)</i></small></span></h6>
+          <h6>M.A. Open Design <span><small><i>(withdrew)</i></small></span></h6>
           <p><small>
             Humboldt-Universität zu Berlin (HU) <br />
             Universidad de Buenos Aires (UBA) <br />
