attempt fixing Home module blinking on mobile

--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -106,7 +106,7 @@
 
     <div class="hiw-feature-desc">
       <p>
-        Personalised symptom checker function, tailored questions for individual circumstances
+        AI-employed symptom checker function, tailored questions for individual circumstances following same procedures as a real physician
       </p>
     </div>
   </div>
